adding some spacing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
         startGame()
         listenForEnter()
-        say(currentRoom + "\n" + rooms[currentRoom]["description"])
+        say(currentRoom + "\n\n" + rooms[currentRoom]["description"])
     </script>
 </body>
 
