rename and added line spacing on laptop versions as well as mobile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zorkington</title>
-    <link rel="icon" type="image/png" href="files/favicon.ico">
+    <link rel="icon" type="image/png" href="files/zorkington.ico">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="zorkington.css" />
     <script src="zorkScript.js"></script>
