--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="files/zorkington.ico">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="zorkington.css" />
-    <script src="zorkScript.js"></script>
+    <script src="zorkington.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,6 @@
     <script>
         startGame()
         listenForEnter()
-        say(currentRoom + "\n\n" + rooms[currentRoom]["description"])
     </script>
 </body>
 
