removed clear input function and reorganized

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="log"></div>
         <div id='buttons'>
             <button id='submit' class='button' onclick="submit()">Submit!</button>
-            <button id='newGame' class='button' onclick="newGame()">New Game</button>
+            <button id='newGame' class='button' onclick="startGame()">New Game</button>
         </div>
         <textarea id="playerInput" placeholder="Input commands here! Use i to check Inventory. Use look around to check your surroundings."></textarea>
     </div>
